# JunkCalculator2

./: .editorconfig  .gitignore  Base.h  BigInt.h  BuiltinRegistry.cpp  BuiltinRegistry.h  Bytecode.h  CMakeLists.txt  COMMIT_CONVENTION.md  Compiler.cpp  Compiler.h  Complex.h  Evaluator.cpp  Evaluator.h  Expr.h  Factorization.cpp  Fraction.h  GcHeap.h  Groebner.cpp  Groebner.h  HelpText.h  Highlight.h  Image.h  Integration.cpp  Integration.h  LICENSE.txt  Lexer.cpp  Lexer.h  Matrix.h  Module.h  Parser.cpp  Parser.h  Probability.h  README.md  README_zh-CN.md  SymRules.h  Symbolic.cpp  Symbolic.h  Token.h  Tolerance.h  (+4 more)
data/: demo_workspace.jc2  documentation.json
examples/: brainfuck.jc2  doom.jc2  life_oop.jc2  music_gen.jc2  sorting_visualizer.jc2
jc2-language/: .vscodeignore  build-doc.js  documentation.json  extension.js  jc2-language-2.2.0.vsix  jc2-language-2.3.3.vsix  jc2-language-2.4.0.vsix  jc2-language-2.4.1.vsix  language-configuration.json  package.json
jc2-language/syntaxes/: jc2.tmLanguage.json
lib/: buffer.jc2  collections.jc2  discrete.jc2  engine.jc2  http.jc2  net.jc2  regex.jc2
modules/: bytes_module.h  image_module.h  json_module.h  latex_module.h  prob_module.h  window_module.h
src/: main.cpp  resource.rc
src/cas/: Factorization.cpp  Factorization.h  Integration.cpp  SymEval.h  SymRules.h  Symbolic.cpp  Symbolic.h
src/frontend/: Compiler.cpp  Compiler.h  Expr.h  Highlight.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
src/math/: BigInt.h  Complex.h  Fraction.h  Matrix.h
src/memory/: GcHeap.h  Value.h
src/modules/: Image.h  Module.h  bytes_module.h  ffi_module.cpp  ffi_module.h  image_module.h  json_module.h  latex_module.h  prob_module.h  socket_module.h  window_module.h
src/vm/: BuiltinRegistry.cpp  BuiltinRegistry.h  Bytecode.h  EngineInterrupt.h  GeneratedHelpText.h  HelpRouter.h  HelpText.h  VM.cpp  VM.h
